# mcap-reader

./: .gitignore  README.md  pyproject.toml
docs/: FUNDAMENTALS.md
src/mcap_reader/: __init__.py  calibration.py  cli.py  deserializer.py  episode.py  reader.py  sync.py
src/mcap_reader/messages/: __init__.py  camera_info.py  compressed_image.py  image.py  imu.py  joint_state.py  pointcloud.py  transform.py
src/mcap_reader/transforms/: __init__.py  buffer.py  frames.py  math.py
tests/: conftest.py  test_deserializer.py  test_episode.py  test_messages.py  test_performance.py  test_sync.py  test_transforms.py
tests/benchmarks/: bench_all.py
tests/generators/: generate_mcap.py
