[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcap-reader"
version = "0.1.0"
description = "Python library and CLI for reading MCAP files (ROS 2 recording format) — a learning project for robotics data formats"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Achyuth Samudrala"},
]

dependencies = [
    "mcap>=0.4",
    "mcap-ros2-support>=0.5",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "click>=8.1",
    "opencv-python>=4.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "hypothesis>=6.82",
    "scipy>=1.11",
    "ruff>=0.1",
]

[project.scripts]
mcap-reader = "mcap_reader.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
